grouper-misc/grouperActivemq/source/edu/upenn/isc/activemqExt/org/apache/commons/jexl2/parser/Parser.java
/*******************************************************************************
 * Copyright 2012 Internet2
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *   http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 ******************************************************************************/
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser;

import java.io.Reader;

import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTAdditiveNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTAdditiveOperator;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTAmbiguous;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTAndNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTArrayAccess;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTArrayLiteral;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTAssignment;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTBitwiseAndNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTBitwiseComplNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTBitwiseOrNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTBitwiseXorNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTBlock;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTConstructorNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTDivNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTEQNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTERNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTEmptyFunction;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTFalseNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTForeachStatement;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTFunctionNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTGENode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTGTNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTIdentifier;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTIfStatement;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTJexlScript;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTLENode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTLTNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTMapEntry;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTMapLiteral;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTMethodNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTModNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTMulNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTNENode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTNRNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTNotNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTNullLiteral;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTNumberLiteral;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTOrNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTReference;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTReferenceExpression;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTReturnStatement;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTSizeFunction;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTSizeMethod;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTStringLiteral;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTTernaryNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTTrueNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTUnaryMinusNode;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTVar;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ASTWhileStatement;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.JJTParserState;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.JexlParser;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ParseException;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.Parser;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ParserConstants;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ParserTokenManager;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.ParserTreeConstants;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.SimpleCharStream;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.parser.Token;
import edu.upenn.isc.activemqExt.org.apache.commons.jexl2.JexlInfo;

public class Parser extends JexlParser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected JJTParserState jjtree = new JJTParserState();public boolean ALLOW_REGISTERS = false;

    public ASTJexlScript parse(Reader reader, JexlInfo info)
        throws ParseException {
        /*
         * If registers are allowed, the default parser state has to be REGISTERS.
         */
        if (ALLOW_REGISTERS) {
            token_source.defaultLexState = REGISTERS;
        }
        ReInit(reader);
        /*
         *  lets do the 'Unique Init' in here to be
         *  safe - it's a pain to remember
         */

        ASTJexlScript tree = JexlScript();
        tree.value = info;
        return tree;
    }

/***************************************
 *      Statements
 ***************************************/
  final public ASTJexlScript JexlScript() throws ParseException {
                              /*@bgen(jjtree) JexlScript */
  ASTJexlScript jjtn000 = new ASTJexlScript(JJTJEXLSCRIPT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case FOREACH:
        case WHILE:
        case NEW:
        case VAR:
        case EMPTY:
        case SIZE:
        case NULL:
        case TRUE:
        case FALSE:
        case RETURN:
        case LPAREN:
        case LCURLY:
        case LBRACKET:
        case SEMICOL:
        case not:
        case minus:
        case tilda:
        case IDENTIFIER:
        case REGISTER:
        case INTEGER_LITERAL:
        case FLOAT_LITERAL:
        case STRING_LITERAL:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Statement();
      }
      jj_consume_token(0);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
     jjtreeCloseNodeScope(jjtn000);
     {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
       jjtreeCloseNodeScope(jjtn000);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOL:
      jj_consume_token(SEMICOL);
      break;
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(3)) {
        Block();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          IfStatement();
          break;
        case FOR:
        case FOREACH:
          ForeachStatement();
          break;
        case WHILE:
          WhileStatement();
          break;
        case NEW:
        case EMPTY:
        case SIZE:
        case NULL:
        case TRUE:
        case FALSE:
        case LPAREN:
        case LCURLY:
        case LBRACKET:
        case not:
        case minus:
        case tilda:
        case IDENTIFIER:
        case REGISTER:
        case INTEGER_LITERAL:
        case FLOAT_LITERAL:
        case STRING_LITERAL:
          ExpressionStatement();
          break;
        case RETURN:
          ReturnStatement();
          break;
        case VAR:
          Var();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void Block() throws ParseException {
                       /*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(LCURLY);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case FOREACH:
        case WHILE:
        case NEW:
        case VAR:
        case EMPTY:
        case SIZE:
        case NULL:
        case TRUE:
        case FALSE:
        case RETURN:
        case LPAREN:
        case LCURLY:
        case LBRACKET:
        case SEMICOL:
        case not:
        case minus:
        case tilda:
        case IDENTIFIER:
        case REGISTER:
        case INTEGER_LITERAL:
        case FLOAT_LITERAL:
        case STRING_LITERAL:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        Statement();
      }
      jj_consume_token(RCURLY);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void ExpressionStatement() throws ParseException {
    Expression();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEW:
      case EMPTY:
      case SIZE:
      case NULL:
      case TRUE:
      case FALSE:
      case LPAREN:
      case LCURLY:
      case LBRACKET:
      case not:
      case minus:
      case tilda:
      case IDENTIFIER:
      case REGISTER:
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case STRING_LITERAL:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
                                 ASTAmbiguous jjtn001 = new ASTAmbiguous(JJTAMBIGUOUS);
                                 boolean jjtc001 = true;
                                 jjtree.openNodeScope(jjtn001);
                                 jjtreeOpenNodeScope(jjtn001);
      try {
        Expression();
      } catch (Throwable jjte001) {
                                 if (jjtc001) {
                                   jjtree.clearNodeScope(jjtn001);
                                   jjtc001 = false;
                                 } else {
                                   jjtree.popNode();
                                 }
                                 if (jjte001 instanceof RuntimeException) {
                                   {if (true) throw (RuntimeException)jjte001;}
                                 }
                                 if (jjte001 instanceof ParseException) {
                                   {if (true) throw (ParseException)jjte001;}
                                 }
                                 {if (true) throw (Error)jjte001;}
      } finally {
                                 if (jjtc001) {
                                   jjtree.closeNodeScope(jjtn001, true);
                                   jjtreeCloseNodeScope(jjtn001);
                                 }
      }
    }
    if (jj_2_2(2)) {
      jj_consume_token(SEMICOL);
    } else {
      ;
    }
  }

  final public void IfStatement() throws ParseException {
                      /*@bgen(jjtree) IfStatement */
  ASTIfStatement jjtn000 = new ASTIfStatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        Statement();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void WhileStatement() throws ParseException {
                         /*@bgen(jjtree) WhileStatement */
  ASTWhileStatement jjtn000 = new ASTWhileStatement(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      Statement();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void ForeachStatement() throws ParseException {
                           /*@bgen(jjtree) ForeachStatement */
  ASTForeachStatement jjtn000 = new ASTForeachStatement(JJTFOREACHSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
        jj_consume_token(FOR);
        jj_consume_token(LPAREN);
        LValueVar();
        jj_consume_token(COLON);
        Expression();
        jj_consume_token(RPAREN);
        Statement();
        break;
      case FOREACH:
        jj_consume_token(FOREACH);
        jj_consume_token(LPAREN);
        LValueVar();
        jj_consume_token(IN);
        Expression();
        jj_consume_token(RPAREN);
        Statement();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void ReturnStatement() throws ParseException {
                          /*@bgen(jjtree) ReturnStatement */
  ASTReturnStatement jjtn000 = new ASTReturnStatement(JJTRETURNSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      Expression();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

/***************************************
 *      Expression syntax
 ***************************************/
  final public void Expression() throws ParseException {
    ConditionalExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case assign:
      jj_consume_token(assign);
                                                     ASTAssignment jjtn001 = new ASTAssignment(JJTASSIGNMENT);
                                                     boolean jjtc001 = true;
                                                     jjtree.openNodeScope(jjtn001);
                                                     jjtreeOpenNodeScope(jjtn001);
      try {
        Expression();
      } catch (Throwable jjte001) {
                                                     if (jjtc001) {
                                                       jjtree.clearNodeScope(jjtn001);
                                                       jjtc001 = false;
                                                     } else {
                                                       jjtree.popNode();
                                                     }
                                                     if (jjte001 instanceof RuntimeException) {
                                                       {if (true) throw (RuntimeException)jjte001;}
                                                     }
                                                     if (jjte001 instanceof ParseException) {
                                                       {if (true) throw (ParseException)jjte001;}
                                                     }
